<resources>
    <!--Login and register screen-->
    <string name="app_name">叁闻</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_con_password">Confirm Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>

    <string name="error_password">Password must contain at least 8 characters.</string>
    <!--Login error-->
    <string name="error_password_incorrect">Incorrect password.</string>
    <string name="error_username_not_exist">Username not exists.</string>
    <!--Register error-->
    <string name="error_username">Username can not be null.</string>
    <string name="error_con_password">Confirm password is different from password.</string>
    <string name="error_username_exist">Username already exists.</string>
    <string name="error_service">Service Error.</string>

    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="news_title">Title</string>
    <string name="news_description">Secondary text</string>

    <!--Backdrop menu labels-->
    <string name="account_label">My Account</string>
    <string name="my_favorite">My Favorites</string>
    <string name="top_like_label">Top Like</string>
    <string name="apartment_label">Apartment</string>
    <string name="change_mode_label">Dark Mode</string>
    <string name="settings_label">Settings</string>
    <string name="about_us_label">About Us</string>

    <!--Browser screen-->
    <string name="share_label">Share</string>
    <string name="button_logout">Logout</string>
    <string name="change_avatar">Change Avatar</string>

    <!--account fragment-->
    <string name="gender">性别</string>
    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="occupation">行业</string>
    <string-array name="occupation">
        <item>学生</item>
        <item>高新科技</item>
        <item>文化传媒</item>
        <item>金融</item>
        <item>服务业</item>
        <item>商业服务</item>
        <item>医疗服务</item>
        <item>艺术娱乐</item>
        <item>制造加工</item>
        <item>地产建筑</item>
        <item>贸易零售</item>
        <item>公共事业</item>
        <item>交通仓储</item>
        <item>农林牧渔</item>
    </string-array>
    <string name="age">出生日期</string>
    <string-array name="age">
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="button_update">Update Profile</string>
    <string name="gender_default">男</string>
    <string name="occupation_default">学生</string>
    <string name="age_default">1970</string>


</resources>
