<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.button.MaterialButton
        android:id="@+id/my_account_btn"
        style="@style/Widget.Custom.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_label" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <android.support.design.button.MaterialButton
        android:id="@+id/top_like_btn"
        style="@style/Widget.Custom.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_favorite" />


    <android.support.design.button.MaterialButton
        android:id="@+id/change_mode_btn"
        style="@style/Widget.Custom.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_mode_label" />


    <android.support.design.button.MaterialButton
        style="@style/Widget.Custom.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_label" />


    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <android.support.design.button.MaterialButton
        android:id="@+id/about_us_btn"
        style="@style/Widget.Custom.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_label" />

</merge>
