<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/account_avatar_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <android.support.design.button.MaterialButton
        android:id="@+id/account_avatar_btn"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/change_avatar" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/hint_username"
        android:textAppearance="@style/TextAppearance.Custom.Title"
        app:fontFamily="casual"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/gender_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/gender_show_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_default" />

                <Spinner
                    android:id="@+id/gender_input"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/occupation_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/occupation"/>

                <TextView
                    android:id="@+id/occupation_show_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/occupation_default"/>

                <Spinner
                    android:id="@+id/occupation_input"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/occupation"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/age_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"/>

                <TextView
                    android:id="@+id/age_show_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age_default"/>

                <Spinner
                    android:id="@+id/age_input"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/age"/>

            </LinearLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/update_profile_btn"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/button_update" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/mainBackgroundColor" />

        </LinearLayout>



        <android.support.design.button.MaterialButton
            android:id="@+id/logout_btn"
            style="@style/Widget.Custom.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/button_logout" />


    </RelativeLayout>

</LinearLayout>